[package]
name = "cccccllllliiiii"
version = "0.1.2"
authors = ["ZySvC"]
license = "GPL-3.0"
repository = "https://github.com/zysv/CCCCCLLLLLIIIII"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
simple_logger = { version = "4.0.0", features = ["threads"] }
