[package]
name = "cccccllllliiiii"
version = "0.2.1"
authors = ["ZySvC"]
license = "GPL-3.0"
repository = "https://github.com/zysv/CCCCCLLLLLIIIII"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
simple_logger = { version = "4.0.0", features = ["threads"] }
reqwest = { version = "0.11.12", features = ["json"] }
tokio = { version = "1.21.2", features = ["full"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
colored = "2.0.0"
clap = "4.0.19"
# terminal = "0.2.1"
